# web2ldap

./: .coveragerc  .gitignore  AUTHORS  CHANGES  Dockerfile.debian-bullseye-ae-dir-repo  Dockerfile.debian-stable-venv  INSTALL  LICENSE  MANIFEST.in  README  README.md  TODO.md  clean.sh  release.sh  setup.cfg  setup.py  start_gunicorn.sh  start_standalone.sh  start_uwsgi.sh  stdeb.cfg  tox.ini
cgi-bin/: web2ldap.cgi
docker/: Dockerfile.debian-bullseye-ae-dir-repo  Dockerfile.opensuse-tumbleweed  Dockerfile.opensuse-tumbleweed-rpm  Dockerfile.opensuse-tumbleweed-venv  README.md  opt.web2ldap.bin.web2ldap
etc/: dumpasn1.cfg
fcgi/: spawn-web2ldap.fcgi  web2ldap.py
htdocs/: .htaccess  changes-0.10.html  changes-0.11.html  changes-0.12.html  changes-0.13.html  changes-0.14.html  changes-0.15.html  changes-0.16.html  changes-0.7.html  changes-0.8.html  changes-0.9.html  changes-1.0.html  changes-1.1.html  changes-1.2.html  changes-1.3.html  changes-1.4.html  changes-1.5.html  changes-1.6.html  changes-1.7.html  changes-1.8.html  changes-ancient.html  changes.html  compability.html  compatibility.html  demo.html  docs.html  download.html  faq.html  features.html  feedback.html  files.html  install.html  install_container.html  install_debian.html  install_opensuse.html  install_rhel.html  install_windows.html  news.html  related.html  releases.json  (+14 more)
pylib/: ldapsession.py  msHTTPHandler.py  msHTTPServer.py  msbase.py  msgzip.py  mssignals.py
sbin/: checkinst.py  web2ldap.py  web2ldap_postinstall.sh
tests/: __init__.py  test_simple.py
web2ldap/: __about__.py  (+17 more)
(+562 files in other folders)
