[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://code.stroeder.com/AE-DIR/web2ldap
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Database :: Front-Ends
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP

[install]
compile = 1
optimize = 1

[bdist_wheel]
universal = 0

[aliases]
release = clean --all sdist --formats=gztar bdist_wheel --python-tag=py3 upload --sign
